--- a/soal5.html
+++ b/soal5.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>no 5</title>
+    <title>soal 5</title>
 </head>
 <body>
     <script>
-        var alrn = promt("menu makanan")
-        switch (alrn){
-            case "bakso":
-            alert("Harga Makanan 10000")
-            break
-            case "mie ayam":
-            alert("Harga Makanan 8000")
-            break
-            case "rawon":
-            alert("Harga Makanan 12000")
-            break
-            case "nasi pecel":
-            alert("Harga Makanan 7000")
-            break
-            case "kupang":
-            alert("Harga Makanan 13000")
-            break
-        default:
-        }
+        alert("Menu Makanan : bakso, mie ayam, rawon, pecel, kupang")
+        var makanan = prompt("Masukkan menu yang Anda pilih: ");
 
-        
+        if(makanan == "bakso"){
+            document.write("Harga makanan : 10000");
+        }
+        if(makanan == "mie ayam"){
+            document.write("Harga makanan : 8000");
+        }
+        if(makanan == "rawon"){
+            document.write("Harga makanan : 12000");
+        }
+        if(makanan == "nasi pecel"){
+            document.write("Harga makanan : 7000");
+        }
+        if(makanan == "kupang"){
+            document.write("Harga makanan : 13000");
+        }
+        else{
+            document.write("Menu tidak tersedia");
+        }
     </script>
-    
 </body>
 </html>
+
